recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:14: error: not found: value lenght
    avance(lenght);
           ^Koch:22: error: not found: value evels
    snowSide(evels-1,length/3);
             ^